update config, fix spacing bug, fix pagination bug

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: main;
-    src: url(../fonts/main2.otf);
+    src: url('../fonts/bygeoFixed.otf');
 }
 
 * {
